feat: criar os recusos de salvar e listar pessoas